# fission-cli

./: CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/: CODEOWNERS  dependabot.yml
.github/workflow/: bench.yml  coverage.yml  docker.yml  release.yml  tests_and_checks.yml
src/: cmd.rs  ipfs.rs  legacy.rs  lib.rs  main.rs  utils.rs
src/cmd/: app.rs  generate.rs  setup.rs  user.rs
src/ipfs/: config.rs  daemon.rs  error.rs  http.rs  options.rs  result.rs  tests.rs
src/ipfs/config/: API.rs  Addresses.rs  addresses.rs  api.rs
src/test/: daemon.rs
src/test/data/more-tests/: also-test.txt
src/test/data/more-tests/even more/: noper.nope
src/utils/: config.rs  file_management.rs  http.rs  json.rs  log.rs  math.rs
test-dir/: test.txt
