[package]
name = "fission"
authors = ["James Walker <walkah@walkah.net>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bs58 = "0.4.0"
base64 = "0.13.0"
clap = { version = "3.2.12", features = ["derive"] }
did-key = "0.1.1"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.87"
reqwest = "0.11.12"
bytes = "1.2.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.58"
futures = "0.3.25"