[package]
name = "fission"
authors = ["James Walker <walkah@walkah.net>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bs58 = "0.4"
base64 = "0.20"
clap = { version = "3.2", features = ["derive"] }
did-key = "0.2"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
bytes = "1.2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
ipfs-api-backend-hyper = {git="https://github.com/BoisterousCoder/rust-ipfs-api.git"} #This is temporary until change get merge and released into the main package
walkdir = "2.3"
graceful = "0.1"

[dev-dependencies]
proptest = "1.0"
serial_test = "0.9"